tests/simple_tests/syntaxError/plusPetitEgalInversion.py
if 4 =< 3:
	print("ok")